refactor and updaete class EventsForAllCommand

--- a/SquadApplication/ViewCustom/EventsForAllCommandsPage.xaml
+++ b/SquadApplication/ViewCustom/EventsForAllCommandsPage.xaml
@@ -41,7 +41,7 @@
                                        JustifyContent="SpaceBetween"
                                        Wrap="Wrap">
 
-                                <Button Text="Предстоящие"
+                                <Button Text="По дате"
                                         BackgroundColor="#1e90ff"
                                         TextColor="White"
                                         CornerRadius="8"
